:bug: Fix scrolling issue on mobile

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -18,6 +18,11 @@
     display: inline-block;
   }
 
+  div,
+  a {
+    height: 2rem;
+  }
+
   a:hover {
     color: var(--secondary);
   }
